#13: Towards using jlink for packaging (wip)